# pcb

./: .gitignore  CMakeLists.txt  main.cpp  pcb.ui~  pcb.xml
Core/: Point.h  Rect.h  Size.h
Models/: HoleItem.cpp  HoleItem.h  ModelFactory.cpp  ModelFactory.h  SchemeItem.cpp  SchemeItem.h  SchemeModel.cpp  SchemeModel.h  SmdContactItem.cpp  SmdContactItem.h
UI/: MainWindow.cpp  MainWindow.h  PcbEditor.cpp  PcbEditor.h  Scene.cpp  Scene.h  SettingsBox.cpp  SettingsBox.h  ToolPalette.cpp  ToolPalette.h
ViewItems/: HoleViewItem.cpp  HoleViewItem.h  SmdContactViewItem.cpp  SmdContactViewItem.h  ViewItem.cpp  ViewItem.h
